--- a/MoodTracker/app/src/main/res/layout/activity_main.xml
+++ b/MoodTracker/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,82 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/row_feelings"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="What are you feeling?"
+        android:layout_margin="10dp"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:stretchColumns="*">
+        <TableRow>
+            <ImageView
+                android:id="@+id/iv_sad"
+                android:src="@drawable/sad_face"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true" />
+            <ImageView
+                android:id="@+id/iv_neutral"
+                android:src="@drawable/neutral_face"
+                android:layout_margin="10dp"
+                android:maxWidth="2dp"
+                android:gravity="center"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true" />
+            <ImageView
+                android:id="@+id/iv_happy"
+                android:src="@drawable/happy_face"
+                android:layout_margin="10dp"
+                android:maxWidth="2dp"
+                android:gravity="center"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true" />
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:id="@+id/tv_feeling_sad"
+                android:text="Sad"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"/>
+            <TextView
+                android:id="@+id/tv_feeling_neutral"
+                android:text="Neutral"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"/>
+            <TextView
+                android:id="@+id/tv_feeling_happy"
+                android:text="Happy"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"/>
+        </TableRow>
+    </TableLayout>
 
+    <TextView
+        android:id="@+id/tv_question"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="What are you feeling?"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/row_feelings"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
