--- a/MoodTracker/app/src/main/res/layout/activity_main.xml
+++ b/MoodTracker/app/src/main/res/layout/activity_main.xml
@@ -51,22 +51,19 @@
                 android:text="Sad"
                 android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"/>
+                android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/tv_feeling_neutral"
                 android:text="Neutral"
                 android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"/>
+                android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/tv_feeling_happy"
                 android:text="Happy"
                 android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"/>
+                android:layout_height="wrap_content"/>
         </TableRow>
     </TableLayout>
 
